PieCharts, relevant Database corrections

--- a/src/kaizen/Timesheets.fxml
+++ b/src/kaizen/Timesheets.fxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.paint.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.image.*?>
@@ -12,7 +15,7 @@
 <AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kaizen.TimesheetsController">
    <children>
       <ImageView fitHeight="600.0" fitWidth="400.0" layoutX="7.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-      <GridPane layoutX="150.0" layoutY="5.0" prefHeight="783.0" prefWidth="460.0" AnchorPane.bottomAnchor="12.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="5.0">
+      <GridPane layoutX="150.0" layoutY="5.0" prefHeight="783.0" prefWidth="460.0" styleClass="red-radio-button" stylesheets="@stylesheet.css" AnchorPane.bottomAnchor="12.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="5.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
@@ -23,9 +26,68 @@
           <RowConstraints maxHeight="343.6373291015625" minHeight="0.0" prefHeight="139.04803466796875" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#80ff80" height="39.0" mouseTransparent="true" stroke="#80ff80" strokeType="INSIDE" width="178.0" GridPane.rowIndex="1">
+               <effect>
+                  <Glow />
+               </effect>
+               <GridPane.margin>
+                  <Insets bottom="75.0" left="540.0" />
+               </GridPane.margin>
+            </Rectangle>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ccffff" height="39.0" mouseTransparent="true" stroke="#ccffff" strokeType="INSIDE" width="178.0">
+               <effect>
+                  <Glow />
+               </effect>
+               <GridPane.margin>
+                  <Insets left="540.0" top="200.0" />
+               </GridPane.margin>
+            </Rectangle>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ff80ff" height="39.0" mouseTransparent="true" stroke="#ff80ff" strokeType="INSIDE" width="178.0" GridPane.rowIndex="1">
+               <effect>
+                  <Glow />
+               </effect>
+               <GridPane.margin>
+                  <Insets bottom="75.0" left="140.0" />
+               </GridPane.margin>
+            </Rectangle>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#80bfff" height="39.0" mouseTransparent="true" stroke="#80bfff" strokeType="INSIDE" width="178.0">
+               <effect>
+                  <Glow />
+               </effect>
+               <GridPane.margin>
+                  <Insets left="140.0" top="200.0" />
+               </GridPane.margin>
+            </Rectangle>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#cd9cff" height="39.0" mouseTransparent="true" stroke="#cc99ff" strokeType="INSIDE" width="178.0" GridPane.rowIndex="1">
+               <effect>
+                  <Glow />
+               </effect>
+               <GridPane.margin>
+                  <Insets bottom="75.0" left="340.0" />
+               </GridPane.margin>
+            </Rectangle>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffb84d" height="39.0" mouseTransparent="true" stroke="#ffb84d" strokeType="INSIDE" width="178.0" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets bottom="200.0" left="340.0" />
+               </GridPane.margin>
+               <effect>
+                  <Glow />
+               </effect>
+            </Rectangle>
+            <RadioButton fx:id="categoryRelaxation" mnemonicParsing="false" styleClass="relaxation-radio-button" stylesheets="@stylesheet.css" text="Relaxation" GridPane.rowIndex="1">
+               <toggleGroup>
+                  <ToggleGroup fx:id="toggleGroup" />
+               </toggleGroup>
+               <GridPane.margin>
+                  <Insets bottom="200.0" left="350.0" />
+               </GridPane.margin>
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </RadioButton>
             <Label prefHeight="53.0" prefWidth="670.0" styleClass="large-label" stylesheets="@stylesheet.css" text="What did you spend your time on?">
                <GridPane.margin>
-                  <Insets left="10.0" />
+                  <Insets left="10.0" top="50.0" />
                </GridPane.margin>
             </Label>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="What time did you start?" GridPane.rowIndex="1">
@@ -113,55 +175,47 @@
                   <Insets left="500.0" right="250.0" top="320.0" />
                </GridPane.margin>
             </TextField>
-            <RadioButton fx:id="categoryDaily" mnemonicParsing="false" text="Daily" GridPane.rowIndex="1">
+            <RadioButton fx:id="categoryDaily" mnemonicParsing="false" styleClass="daily-radio-button" stylesheets="@stylesheet.css" text="Daily" toggleGroup="$toggleGroup" GridPane.rowIndex="1">
                <GridPane.margin>
-                  <Insets bottom="75.0" left="50.0" />
-               </GridPane.margin>
-               <font>
-                  <Font size="20.0" />
-               </font>
-               <toggleGroup>
-                  <ToggleGroup fx:id="toggleGroup" />
-               </toggleGroup>
-            </RadioButton>
-            <RadioButton fx:id="categoryWork" mnemonicParsing="false" text="Work" toggleGroup="$toggleGroup" GridPane.rowIndex="1">
-               <GridPane.margin>
-                  <Insets bottom="200.0" left="50.0" />
+                  <Insets bottom="75.0" left="150.0" />
                </GridPane.margin>
                <font>
                   <Font size="20.0" />
                </font>
             </RadioButton>
-            <RadioButton fx:id="categoryRelaxation" mnemonicParsing="false" text="Relaxation" toggleGroup="$toggleGroup" GridPane.rowIndex="1">
+            <RadioButton fx:id="categoryWork" mnemonicParsing="false" styleClass="work-radio-button" stylesheets="@stylesheet.css" text="Work" toggleGroup="$toggleGroup" GridPane.rowIndex="1">
                <GridPane.margin>
-                  <Insets bottom="200.0" left="350.0" />
+                  <Insets bottom="200.0" left="150.0" />
                </GridPane.margin>
                <font>
                   <Font size="20.0" />
                </font>
             </RadioButton>
-            <RadioButton fx:id="categoryRelationships" mnemonicParsing="false" text="Relationships" toggleGroup="$toggleGroup" GridPane.rowIndex="1">
+            <RadioButton fx:id="categoryRelationships" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" prefHeight="37.0" prefWidth="168.0" styleClass="relationships-radio-button" stylesheets="@stylesheet.css" text="Relationships" toggleGroup="$toggleGroup" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets bottom="75.0" left="350.0" />
                </GridPane.margin>
                <font>
                   <Font size="20.0" />
                </font>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
             </RadioButton>
-            <RadioButton fx:id="categoryWellness" mnemonicParsing="false" text="Wellness" toggleGroup="$toggleGroup" GridPane.rowIndex="1">
+            <RadioButton fx:id="categoryWellness" mnemonicParsing="false" styleClass="wellness-radio-button" stylesheets="@stylesheet.css" text="Wellness" toggleGroup="$toggleGroup" GridPane.rowIndex="1">
                <GridPane.margin>
-                  <Insets bottom="75.0" left="650.0" />
+                  <Insets bottom="75.0" left="550.0" />
                </GridPane.margin>
                <font>
                   <Font size="20.0" />
                </font>
             </RadioButton>
-            <RadioButton fx:id="categoryProjects" mnemonicParsing="false" text="Projects" toggleGroup="$toggleGroup" GridPane.rowIndex="1">
+            <RadioButton fx:id="categoryProjects" mnemonicParsing="false" styleClass="projects-radio-button" stylesheets="@stylesheet.css" text="Projects" toggleGroup="$toggleGroup" GridPane.rowIndex="1">
                <GridPane.margin>
-                  <Insets bottom="200.0" left="650.0" />
+                  <Insets bottom="200.0" left="550.0" />
                </GridPane.margin>
                <font>
-                  <Font size="20.0" />
+                  <Font name="System Bold" size="20.0" />
                </font>
             </RadioButton>
             <DatePicker fx:id="DtPicker" promptText="Select your date" GridPane.rowIndex="1">
