--- a/src/kaizen/WeeklyBreakdown.fxml
+++ b/src/kaizen/WeeklyBreakdown.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="vbox-bar" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kaizen.PieChartController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="vbox-bar" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kaizen.WeeklyBreakdownController">
    <left>
       <BorderPane prefHeight="200.0" prefWidth="200.0" styleClass="menu-panel" stylesheets="@stylesheet.css" BorderPane.alignment="CENTER">
          <center>
@@ -59,19 +59,7 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <PieChart fx:id="lifePieChart" legendSide="RIGHT" legendVisible="false" stylesheets="@stylesheet.css">
-                     <GridPane.margin>
-                        <Insets bottom="100.0" left="50.0" right="50.0" top="100.0" />
-                     </GridPane.margin></PieChart>
-                  <Button fx:id="logInTime" mnemonicParsing="false" onAction="#handlePopUpScreenAction" text="Log in time">
-                     <GridPane.margin>
-                        <Insets left="70.0" top="575.0" />
-                     </GridPane.margin>
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Button>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="large-label" text="Pie Chart Of My Life">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="large-label" text="Daily Breakdown of Time Spent">
                      <GridPane.margin>
                         <Insets bottom="575.0" left="350.0" />
                      </GridPane.margin>
@@ -100,10 +88,31 @@
                         <Insets left="775.0" top="575.0" />
                      </GridPane.margin>
                   </Button>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="add button to access list of time logged in">
-                     <font>
-                        <Font size="23.0" />
-                     </font>
+                  <BarChart fx:id="dailyBarChart" legendVisible="false">
+                    <xAxis>
+                      <CategoryAxis side="BOTTOM" />
+                    </xAxis>
+                    <yAxis>
+                      <NumberAxis side="LEFT" />
+                    </yAxis>
+                     <GridPane.margin>
+                        <Insets bottom="100.0" left="50.0" right="259.0" top="100.0" />
+                     </GridPane.margin>
+                  </BarChart>
+                  <DatePicker fx:id="dailyChartDtPicker" onAction="#loadGraph">
+                     <GridPane.margin>
+                        <Insets left="860.0" />
+                     </GridPane.margin>
+                  </DatePicker>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Duration">
+                     <GridPane.margin>
+                        <Insets left="10.0" />
+                     </GridPane.margin>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="(hours)">
+                     <GridPane.margin>
+                        <Insets left="10.0" top="35.0" />
+                     </GridPane.margin>
                   </Text>
                </children>
             </GridPane>
