New WeeklyTrends.FXML and Controller

--- a/src/kaizen/DailyBreakdown.fxml
+++ b/src/kaizen/DailyBreakdown.fxml
@@ -64,14 +64,6 @@
                         <Insets bottom="575.0" left="350.0" />
                      </GridPane.margin>
                   </Text>
-                  <Button fx:id="dailyBreakdown" mnemonicParsing="false" onAction="#handleDailyBreakdown" text="Daily Breakdown">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                     <GridPane.margin>
-                        <Insets left="250.0" top="575.0" />
-                     </GridPane.margin>
-                  </Button>
                   <Button fx:id="weeklyBreakdown" mnemonicParsing="false" onAction="#handleWeeklyBreakdown" text="Weekly Breakdown">
                      <font>
                         <Font size="24.0" />
@@ -80,12 +72,12 @@
                         <Insets left="500.0" top="575.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button fx:id="weeklyBreakdown1" mnemonicParsing="false" onAction="#handleWeeklyTrends" text="Weekly Trends">
+                  <Button fx:id="weeklyTrends" mnemonicParsing="false" onAction="#handleWeeklyTrends" prefHeight="45.0" prefWidth="201.0" text="Weekly Trends">
                      <font>
                         <Font size="24.0" />
                      </font>
                      <GridPane.margin>
-                        <Insets left="775.0" top="575.0" />
+                        <Insets left="765.0" top="575.0" />
                      </GridPane.margin>
                   </Button>
                   <BarChart fx:id="dailyBarChart" legendVisible="false">
@@ -96,22 +88,30 @@
                       <NumberAxis side="LEFT" />
                     </yAxis>
                      <GridPane.margin>
-                        <Insets bottom="100.0" left="50.0" right="259.0" top="100.0" />
+                        <Insets bottom="100.0" left="100.0" right="100.0" top="100.0" />
                      </GridPane.margin>
                   </BarChart>
                   <DatePicker fx:id="dailyChartDtPicker" onAction="#loadGraph">
                      <GridPane.margin>
-                        <Insets left="860.0" />
+                        <Insets left="275.0" top="575.0" />
                      </GridPane.margin>
                   </DatePicker>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Duration">
                      <GridPane.margin>
-                        <Insets left="10.0" />
+                        <Insets left="50.0" />
                      </GridPane.margin>
                   </Text>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="(hours)">
                      <GridPane.margin>
-                        <Insets left="10.0" top="35.0" />
+                        <Insets left="50.0" top="35.0" />
+                     </GridPane.margin>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Select a date to see that day's activities:" wrappingWidth="162.79385375976562">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets left="125.0" top="575.0" />
                      </GridPane.margin>
                   </Text>
                </children>
